--- a/styles/place.css
+++ b/styles/place.css
@@ -151,6 +151,9 @@ footer{
     background-color: var(--accent2-color);
 
 }
+footer p{
+    color: white;
+}
 
 .weather-icon h2::after {
     content: url("images/weather-icon.svg"); /* Path to the weather icon */
